--- a/Week 2/Html Assignment/resume.html
+++ b/Week 2/Html Assignment/resume.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        
-    </head>
     <body>
         <div>
             <a href="index.html">Home</a> |
@@ -15,7 +12,7 @@
             <a href="Resume.pdf" download>Download Resume</a>
         </div>
         <div>
-            <h5>John Doe | 2020 batch | copyright, 2021</h5>
+            <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
 </html>
