--- a/Week 2/Html Assignment/academic.html
+++ b/Week 2/Html Assignment/academic.html
@@ -6,12 +6,6 @@
                 border: 1px solid black;
                 border-collapse: collapse;
             }
-
-            th {
-                text-align: center;
-                padding-left: 8px;
-                padding-right: 8px;
-            }
         </style>
     </head>
     <body>
@@ -58,7 +52,7 @@
             </table>
         </div>
         <div>
-            <h5>John Doe | 2020 batch | copyright, 2021</h5>
+            <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
 </html>
