--- a/Week 2/Html Assignment/index.html
+++ b/Week 2/Html Assignment/index.html
@@ -14,7 +14,7 @@
             <p>Self Intro : My name is John Doe. I love to listen to music and travel across the world.</p>
         </div>
         <div>
-            <h5>John Doe | 2020 batch | copyright, 2021</h5>
+            <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
 </html>
