--- a/Week 2/Html Assignment/contact.html
+++ b/Week 2/Html Assignment/contact.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    </head>
     <body>
         <div>
             <a href="index.html">Home</a> | 
@@ -20,7 +18,7 @@
             </address>
         </div>
         <div>
-            <h5>John Doe | 2020 batch | copyright, 2021</h5>
+            <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
 </html>
