--- a/Week 2/CSS Assignment/academic.html
+++ b/Week 2/CSS Assignment/academic.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="academic.css">
     </head>
     <body>
         <div>
-
+            <a href="index.html">Home</a> | 
+            <a href="personal.html">Personal</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="resume.html">Resume</a>
         </div>
         <div>
+            <h1>Mark Sheet</h1>
+            <table>
+                <tr>
+                    <th class = "sub">Subject</th>
+                    <th class = "marks">Marks</th>
+                </tr>
+                <tr>
+                    <td>English</td>
+                    <td>88</td>
+                </tr>
+                <tr>
+                    <td>Mathematics</td>
+                    <td>95</td>
+                </tr>
+                <tr>
+                    <td>Science</td>
+                    <td>87</td>
+                </tr>
+                <tr>
+                    <td>Social Studies</td>
+                    <td>61</td>
+                </tr>
+                <tr>
+                    <td>Humanities</td>
+                    <td>77</td>
+                </tr>
+                <tr>
+                    <td>Total</td>
+                    <td>408</td>
+                </tr>
+                <tr>
 
+                </tr>
+            </table>
         </div>
-        <div>
-            
+        <div class = "footer">
+            <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
 </html>
