--- a/Week 2/CSS Assignment/index.html
+++ b/Week 2/CSS Assignment/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="index.css">
+    </head>
     <body>
         <div>
             <a href="academic.html">Academic</a> | 
@@ -9,11 +12,11 @@
         </div>
         <div>
             <h1>Student data</h1>
-            <p>Name : John Doe</p>
-            <p>Id : 21f1000000</p>
-            <p>Self Intro : My name is John Doe. I love to listen to music and travel across the world.</p>
+            <p><span>Name :</span> Subhrajyoti Dutta</p>
+            <p><span>Id :</span> 21f1003127</p>
+            <p><span>Self Intro :</span> My name is Subhrajyoti Dutta. I love to do cycling and roller skating. I joined the course in november qualifiers of 2020.</p>
         </div>
-        <div>
+        <div class = "footer">
             <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
