--- a/Week 2/CSS Assignment/contact.html
+++ b/Week 2/CSS Assignment/contact.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="contact.css">
     </head>
     <body>
         <div>
-
+            <a href="index.html">Home</a> | 
+            <a href="personal.html">Personal</a> | 
+            <a href="contact.html">Contact</a> | 
+            <a href="resume.html">Resume</a>
         </div>
         <div>
-
+            <h1>Contact Us:</h1>
+            <address>
+                Online Degree Office, 3rd Floor, ICSR Building,<br>
+                IIT Madras, Chennai - 600036<br>
+                <br>
+                7850-999966 (Mon-Fri 9am-6am)<br><br>
+                <span>Email us:</span>support@onlinedegree.iitm.ac.in
+            </address>
         </div>
-        <div>
-            
+        <div class="footer">
+            <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
 </html>
