--- a/Week 2/CSS Assignment/personal.html
+++ b/Week 2/CSS Assignment/personal.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        img {
-            width : "250";
-            height : "250";
-        }
-    </style>
+    <head>
+        <link rel="stylesheet" href="personal.css">
+    </head>
     <body>
         <div>
             <a href="index.html">Home</a> |
@@ -15,13 +12,13 @@
         </div>
         <div>
             <h1>Personal</h1>
-            <img src="image1.png">
-            <img src="image2.png">
+            <img src="image1.png" width="250" height="250">
+            <img src="image2.png" width="250" height="250">
             <br></br>
             <br><a href = "https://www.onlinedegree.iitm.ac.in/">Click here to view online degree Webpage</a></br>
         </div>
-        <div>
-            <h5>John Doe | 2020 batch | copyright, 2021</h5>
+        <div class="footer">
+            <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
 </html>
