--- a/Week 2/CSS Assignment/resume.html
+++ b/Week 2/CSS Assignment/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link rel="stylesheet" href="resume.css">
     </head>
     <body>
         <div>
@@ -14,7 +14,7 @@
             <h1>Resume</h1>
             <a href="Resume.pdf" download>Download Resume</a>
         </div>
-        <div>
+        <div class="footer">
             <h5>John Doe | 2020 batch | copyright, 2021</h5>
         </div>
     </body>
