--- a/Week 2/Html Assignment/index.html
+++ b/Week 2/Html Assignment/index.html
@@ -9,9 +9,9 @@
         </div>
         <div>
             <h1>Student data</h1>
-            <p>Name : John Doe</p>
-            <p>Id : 21f1000000</p>
-            <p>Self Intro : My name is John Doe. I love to listen to music and travel across the world.</p>
+            <p>Name : Subhrajyoti Dutta</p>
+            <p>Id : 21f1003127</p>
+            <p>Self Intro : My name is Subhrajyoti Dutta. I love to do cycling and roller skating. I joined the course in november qualifiers of 2020.</p>
         </div>
         <div>
             <h5>Subhrajyoti Dutta | 2020 batch | copyright, 2021</h5>
