--- a/Week 2/CSS Assignment/academics.html
+++ b/Week 2/CSS Assignment/academics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="academic.css">
+        <link rel="stylesheet" href="academics.css">
     </head>
     <body>
         <div>
