--- a/Week 2/Html Assignment/personal.html
+++ b/Week 2/Html Assignment/personal.html
@@ -3,7 +3,7 @@
     <body>
         <div>
             <a href="index.html">Home</a> |
-            <a href="academic.html">Academic</a> | 
+            <a href="academics.html">Academics</a> | 
             <a href="contact.html">Contact</a> | 
             <a href="resume.html">Resume</a>
         </div>
