--- a/Week 2/CSS Assignment/index.html
+++ b/Week 2/CSS Assignment/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div>
-            <a href="academic.html">Academic</a> | 
+            <a href="academics.html">Academics</a> | 
             <a href="personal.html">Personal</a> | 
             <a href="contact.html">Contact</a> | 
             <a href="resume.html">Resume</a>
