--- a/Week 2/CSS Assignment/resume.html
+++ b/Week 2/CSS Assignment/resume.html
@@ -6,7 +6,7 @@
     <body>
         <div>
             <a href="index.html">Home</a> |
-            <a href="academic.html">Academic</a> | 
+            <a href="academics.html">Academics</a> | 
             <a href="personal.html">Personal</a> | 
             <a href="contact.html">Contact</a>
         </div>
