--- a/Week 2/Html Assignment/contact.html
+++ b/Week 2/Html Assignment/contact.html
@@ -3,8 +3,8 @@
     <body>
         <div>
             <a href="index.html">Home</a> | 
+            <a href="academics.html">Academics</a> | 
             <a href="personal.html">Personal</a> | 
-            <a href="contact.html">Contact</a> | 
             <a href="resume.html">Resume</a>
         </div>
         <div>
