--- a/Week 2/Html Assignment/index.html
+++ b/Week 2/Html Assignment/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <div>
-            <a href="academic.html">Academic</a> | 
+            <a href="academics.html">Academics</a> | 
             <a href="personal.html">Personal</a> | 
             <a href="contact.html">Contact</a> | 
             <a href="resume.html">Resume</a>
