--- a/Week 2/Html Assignment/academics.html
+++ b/Week 2/Html Assignment/academics.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            table, th, td {
-                border: 1px solid black;
-                border-collapse: collapse;
-            }
-        </style>
     </head>
     <body>
         <div>
@@ -17,34 +11,34 @@
         </div>
         <div>
             <h1>Mark Sheet</h1>
-            <table>
+            <table border = "1px" cellspacing = "0">
                 <tr>
-                    <th>Subject</th>
-                    <th>Marks</th>
+                    <th border = "1px" cellspacing = "0">Subject</th>
+                    <th border = "1px" cellspacing = "0">Marks</th>
                 </tr>
                 <tr>
-                    <td>English</td>
-                    <td>88</td>
+                    <td border = "1px" cellspacing = "0">English</td>
+                    <td border = "1px" cellspacing = "0">88</td>
                 </tr>
                 <tr>
-                    <td>Mathematics</td>
-                    <td>95</td>
+                    <td border = "1px" cellspacing = "0">Mathematics</td>
+                    <td border = "1px" cellspacing = "0">95</td>
                 </tr>
                 <tr>
-                    <td>Science</td>
-                    <td>87</td>
+                    <td border = "1px" cellspacing = "0">Science</td>
+                    <td border = "1px" cellspacing = "0">87</td>
                 </tr>
                 <tr>
-                    <td>Social Studies</td>
-                    <td>61</td>
+                    <td border = "1px" cellspacing = "0">Social Studies</td>
+                    <td border = "1px" cellspacing = "0">61</td>
                 </tr>
                 <tr>
-                    <td>Humanities</td>
-                    <td>77</td>
+                    <td border = "1px" cellspacing = "0">Humanities</td>
+                    <td border = "1px" cellspacing = "0">77</td>
                 </tr>
                 <tr>
-                    <td>Total</td>
-                    <td>408</td>
+                    <td border = "1px" cellspacing = "0">Total</td>
+                    <td border = "1px" cellspacing = "0">408</td>
                 </tr>
                 <tr>
 
